tests/ui/dyn-compatibility/mention-correct-dyn-incompatible-trait.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/mention-correct-dyn-incompatible-trait.rs:19:15
   |
LL |     let test: &mut dyn Bar = &mut thing;
   |               ^^^^^^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/mention-correct-dyn-incompatible-trait.rs:4:8
   |
LL |     fn foo<T>(&self, val: T);
   |        ^^^ ...because method `foo` has generic type parameters
...
LL | trait Bar: Foo { }
   |       --- this trait cannot be made into an object...
   = help: consider moving `foo` to another trait
   = help: only type `Thing` implements the trait, consider using it directly instead

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/mention-correct-dyn-incompatible-trait.rs:19:30
   |
LL |     let test: &mut dyn Bar = &mut thing;
   |                              ^^^^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/mention-correct-dyn-incompatible-trait.rs:4:8
   |
LL |     fn foo<T>(&self, val: T);
   |        ^^^ ...because method `foo` has generic type parameters
...
LL | trait Bar: Foo { }
   |       --- this trait cannot be made into an object...
   = help: consider moving `foo` to another trait
   = help: only type `Thing` implements the trait, consider using it directly instead
   = note: required for the cast from `&mut Thing` to `&mut dyn Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
